# seniorDesignBackend

./: CMakeLists.txt  client.py  netlist.net  startup.sh
inc/: ngspiceSim.h  serverListener.h
src/: ngspiceSim.c  serverListener.c  sspice.c
